# asm-engine

./: --server.address=0.0.0.0  .coverage  .env  .gitignore  .gitmodules  DEPLOYMENT_GUIDE.md  Procfile  README.md  SA_Large_Caps_Calculation.xlsx  SA_Large_Caps_Prices.csv  TW30_Calculation.xlsx  baseline_december_returns.csv  daily_pnl_compare_extended.csv  gips_migration_comparison.csv  monthly_compare_corrected.csv  output.txt  pnl_comparisons_corrected.xlsx  pyproject.toml  railway.json  requirements.txt  yearly_compare_corrected.csv
.claude/: settings.local.json
.streamlit/: config.toml  secrets.toml
AlphaMachine_core/: config.py  data_manager.py  db.py  engine.py  models.py  optimize_params.py  optimizers.py  reporting_no_sparklines.py  utils.py
app/: streamlit_app.py
docs/: PORTFOLIO_TRACKING_IMPLEMENTATION_PLAN.md  numerical-stability-2026.md
sample_data/: stock_data.csv
scripts/: README.md  apply_overlays_to_portfolios.py  audit_portfolios.py  backfill_adjusted_close.py  backfill_adjusted_close_v2.py  backfill_holdings_shares.py  backfill_overlay_signal_target_actual.py  backfill_s3_allocation_history.py  capture_baseline_returns.py  compare_returns.py  create_etoro_stats_table.py  create_excel_calculation.py  data_quality_monitor.py  diagnose_nav_issues.py  export_monthly.py  fix_equalweight_nav.py  fix_nav_baseline.py  fix_nav_baseline_drift.py  import_existing_portfolios.py  migrate_etoro_dates.py  migrate_tracking_tables.py  recalculate_nav.py  recalculate_overlay_nav.py  run_migration.py  scheduled_nav_update.py  scheduled_price_update.py  (+5 more)
(+94 files in other folders)
