[tool.poetry]
name = "alphamachine"
version = "0.1.0"
description = ""
authors = ["lukas-schniepper <lukas.schniepper@gmail.com>"]

# ➜  Hier tragen wir dein Core-Package ein
packages = [
  { include = "AlphaMachine_core" }
]

# --- Abhängigkeiten ----------------------------------------------------
[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.44.1"
pandas = "^2.2"
numpy = "^2.2"
scipy = "^1.15"
scikit-learn = "^1.6"
matplotlib = "^3.10"
openpyxl = "^3.1"
streamlit-extras = "^0.6"

# --- Dev-Abhängigkeiten -------------------------------------------------
pillow = "^11.2.1"
yfinance = "^0.2.56"
psycopg2-binary = "^2.9.10"
sqlmodel = "^0.0.24"
python-dotenv = "^1.1.0"
sqlalchemy = "^2.0.40"
optuna = ">=3,<5"
psycopg = "^3.2.9"
ta = "^0.11.0"
[tool.poetry.group.dev.dependencies]
black = "^24.4"
flake8 = "^7.2"
ruff = "^0.11.9"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
